--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "hubot": ">= 2.5.1",
     "hubot-scripts": ">= 2.4.2",
     "hubot-hipchat": "~2.5.1-5",
-    "ntwitter": "~0.5.0"
+    "ntwitter": "~0.5.0",
+    "gitio": "~1.0.1"
   },
   "engines": {
     "node": ">= 0.8.x",
