--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "ntwitter": "~0.5.0",
     "gitio": "~1.0.1",
     "htmlparser": "~1.7.6",
-    "soupselect": "~0.2.0"
+    "soupselect": "~0.2.0",
+    "flip": "~0.1.0"
   },
   "engines": {
     "node": ">= 0.8.x",
